Added CSS files

--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
-
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/index.css" />
+    <title> angelsiu </title>
 </head>
 
     <body>
-    Initialized index file :)
+        <header>
+            <h1> hi, i'm angelsiu </h1>
+            <h2> commonly known as angeline</h2>
+        </header>
     </body>
 
 </html> 
