--- a/index.html
+++ b/index.html
@@ -13,6 +13,35 @@
             <h1> hi, i'm angelsiu </h1>
             <h2> commonly known as angeline</h2>
         </header>
+
+        <div class="heading">
+            <ul id="horizontal-list">
+                <li> <a href="#"> about me </a> </li>
+                <li> <a href="#"> portfolio </a> </li>
+                <li> <a href="#"> contact </a> </li>
+            </ul>
+        </div>
+
+        <div class="body">
+            <p>
+                i enjoy video games and making them
+            </p>
+
+            <br />
+
+            <p>
+                here is my dog, <a href="#">hiro</a>, in his great gloriousness
+            </p>
+
+            <br />
+
+            <figure>
+                <img id="hiro-socks" src="img/hiro.jpg" alt="hiro with socks"/>
+                <figcaption> look how beautiful of a creature he is</figcaption>
+            </figure>
+
+        </div>
+        
     </body>
 
 </html> 
