Fixed image path
Needed to capitalize 'JPG'

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <br />
 
             <figure>
-                <img id="hiro-socks" src="img/hiro.jpg" alt="hiro with socks"/>
+                <img id="hiro-socks" src="img/hiro.JPG" alt="hiro with socks"/>
                 <figcaption> look how beautiful of a creature he is</figcaption>
             </figure>
 
