--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <body>
         <header>
+            <img src="img/hiro-donut.png" alt="hiro in donut form" />
             <h1> hi, i'm angelsiu </h1>
             <h2> commonly known as angeline</h2>
         </header>
