--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body>
         <header>
-            <img src="img/hiro-donut.png" alt="hiro in donut form" />
+            <img src="img/me-professional.jpg" alt="hiro in donut form" />
             <h1> hi, i'm angelsiu </h1>
             <h2> commonly known as angeline</h2>
         </header>
@@ -25,6 +25,14 @@
 
         <div class="body">
             <p>
+                i'm a third year student in computer science: video games programming at LaSalle College 
+                <br />
+                i represent the whole video games programming student body, as a one of the two class delegates
+                <br />
+                i am also currently an active member of Innovators in Technology, the IT association of LaSalle College, holding executive position for video games programming
+                <br />
+                <br />
+                this is my internet programming class final project <br />
                 i enjoy video games and making them
             </p>
 
