Updated portfolio page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="heading">
             <ul id="horizontal-list">
                 <li> <a href="#"> about me </a> </li>
-                <li> <a href="#"> portfolio </a> </li>
+                <li> <a href="portfolio.html"> portfolio </a> </li>
                 <li> <a href="#"> contact </a> </li>
             </ul>
         </div>
