--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/index_stylesheet.css" />
     <title> angelsiu </title>
 </head>
 
@@ -17,9 +17,9 @@
 
         <div class="heading">
             <ul id="horizontal-list">
-                <li> <a href="#"> about me </a> </li>
+                <li> <a href="aboutme.html"> about me </a> </li>
                 <li> <a href="portfolio.html"> portfolio </a> </li>
-                <li> <a href="#"> contact </a> </li>
+                <li> <a href="contact.html"> contact </a> </li>
             </ul>
         </div>
 
@@ -29,7 +29,7 @@
                 <br />
                 i represent the whole video games programming student body, as a one of the two class delegates
                 <br />
-                i am also currently an active member of Innovators in Technology, the IT association of LaSalle College, holding executive position for video games programming
+                i am also currently an active member of Innovators in Technology, the computer science association of LaSalle College, holding executive position for video games programming
                 <br />
                 <br />
                 this is my internet programming class final project <br />
