--- a/portfolio.html
+++ b/portfolio.html
@@ -1,21 +1,20 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/portfolio.css" />
+    <link rel="stylesheet" href="css/portfolio_stylesheet.css" />
 
     <title> angelsiu/portfolio </title>
-
 </head>
 
 <body>
     <div class="heading">
         <ul id="horizontal-list">
-            <li> <a href="#"> about me </a> </li>
+            <li> <a href="aboutme.html"> about me </a> </li>
             <li> <a href="portfolio.html"> portfolio </a> </li>
-            <li> <a href="#"> contact </a> </li>
+            <li> <a href="contact.html"> contact </a> </li>
         </ul>
     </div>
 
