Updated portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,8 +19,33 @@
     </div>
 
     <div>
-        <p> here is a game i made with Robert Tran for Ludum Dare 44 </p>
-        <iframe frameborder="0" src="https://itch.io/embed/412483?border_width=0" width="550" height="165"></iframe>
+        <p>
+            sometimes i do game jams or programming events when my schedule allows it. so far, i've participated to ConUHacks, bringINTon and Ludum Dare.
+            <br />
+            in my spare time, i enjoy volunteering at DreamHack Montreal, a yearly event about gaming and LAN competitions, which i've been part of since 2016.
+            <br />
+        </p>
+
+        <p>
+            <br />
+            here is a game i made with Robert Tran for Ludum Dare 44
+            <br />
+            <iframe frameborder="0" src="https://itch.io/embed/412483?border_width=0" width="550" height="165"></iframe>
+            <br />
+        </p>
+
+        <p>
+            <br />
+            the following is a game i've made in game engine 1 with Marc-Andre Larouche
+            <!-- insert game here -->
+        </p>
+
+        <p>
+            <br />
+            this is the current project Alejandro Flores and i are collaborating on
+            <!-- github link with an image -->
+        </p>
+
     </div>
 </body>
 
