Re-arranged style sheets
Updated about-me page
Updated home page

--- a/aboutme.html
+++ b/aboutme.html
@@ -3,12 +3,44 @@
 
     <head>
         <link rel="stylesheet" href="css/reset.css" />
-        <link rel="stylesheet" href="css/aboutme_stylesheet.css" />
+        <link rel="stylesheet" href="css/body_stylesheet.css" />
+        <link rel="stylesheet" href="css/img_stylesheet.css" />
         <title> angelsiu/about_me </title>
     </head>
     
     <body>
+        <div class="heading">
+            <ul id="horizontal-list">
+                <li> <a href="aboutme.html"> about me </a> </li>
+                <li> <a href="portfolio.html"> portfolio </a> </li>
+                <li> <a href="contact.html"> contact </a> </li>
+            </ul>
+        </div>
 
+        <div class="paragraph">
+            <p>
+                i'm a third year student in computer science: video games programming at LaSalle College
+                <br />
+                i represent the whole video games programming student body, as a one of the two class delegates
+                <br />
+                i am also currently an active member of Innovators in Technology, the computer science association of LaSalle College, holding executive position for video games programming
+                <br />
+
+            </p>
+
+            <br />
+
+            <p>
+                here is my dog, <a href="#">hiro</a>, in his great gloriousness
+            </p>
+
+            <br />
+
+            <figure>
+                <img id="hiro-socks" src="img/hiro.JPG" alt="hiro with socks" />
+                <figcaption> look how beautiful of a creature he is</figcaption>
+            </figure>
+        </div>
     </body>
 
 </html>
