--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,19 @@
 
     <head>
         <link rel="stylesheet" href="css/reset.css" />
-        <link rel="stylesheet" href="css/contact_stylesheet.css" />
+        <link rel="stylesheet" href="css/body_stylesheet.css" />
+        <link rel="stylesheet" href="css/img_stylesheet.css" />
         <title> angelsiu/contact </title>
     </head>
 
     <body>
-
+        <div class="heading">
+            <ul id="horizontal-list">
+                <li> <a href="aboutme.html"> about me </a> </li>
+                <li> <a href="portfolio.html"> portfolio </a> </li>
+                <li> <a href="contact.html"> contact </a> </li>
+            </ul>
+        </div>
     </body>
 
 </html>
