--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 ﻿<!DOCTYPE html>
 <html>
 
-<head>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/index_stylesheet.css" />
-    <title> angelsiu </title>
-</head>
+    <head>
+        <meta charset="utf-8" />
+        <link rel="stylesheet" href="css/reset.css" />
+        <link rel="stylesheet" href="css/body_stylesheet.css" />
+        <link rel="stylesheet" href="css/img_stylesheet.css" />
+        <title> angelsiu </title>
+    </head>
 
     <body>
         <header>
@@ -23,32 +24,13 @@
             </ul>
         </div>
 
-        <div class="body">
+        <div class="paragraph">
             <p>
-                i'm a third year student in computer science: video games programming at LaSalle College 
-                <br />
-                i represent the whole video games programming student body, as a one of the two class delegates
-                <br />
-                i am also currently an active member of Innovators in Technology, the computer science association of LaSalle College, holding executive position for video games programming
-                <br />
-                <br />
-                this is my internet programming class final project <br />
                 i enjoy video games and making them
+                <br />
+                this is my internet programming class final project
             </p>
-
-            <br />
-
-            <p>
-                here is my dog, <a href="#">hiro</a>, in his great gloriousness
-            </p>
-
-            <br />
-
-            <figure>
-                <img id="hiro-socks" src="img/hiro.JPG" alt="hiro with socks"/>
-                <figcaption> look how beautiful of a creature he is</figcaption>
-            </figure>
-
+            
         </div>
         
     </body>
