--- a/portfolio.html
+++ b/portfolio.html
@@ -1,52 +1,52 @@
 ﻿<!DOCTYPE html>
 <html>
 
-<head>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/portfolio_stylesheet.css" />
+    <head>
+        <meta charset="utf-8" />
+        <link rel="stylesheet" href="css/reset.css" />
+        <link rel="stylesheet" href="css/body_stylesheet.css" />
+        <link rel="stylesheet" href="css/img_stylesheet.css" />
+        <title> angelsiu/portfolio </title>
+    </head>
 
-    <title> angelsiu/portfolio </title>
-</head>
+    <body>
+        <div class="heading">
+            <ul id="horizontal-list">
+                <li> <a href="aboutme.html"> about me </a> </li>
+                <li> <a href="portfolio.html"> portfolio </a> </li>
+                <li> <a href="contact.html"> contact </a> </li>
+            </ul>
+        </div>
 
-<body>
-    <div class="heading">
-        <ul id="horizontal-list">
-            <li> <a href="aboutme.html"> about me </a> </li>
-            <li> <a href="portfolio.html"> portfolio </a> </li>
-            <li> <a href="contact.html"> contact </a> </li>
-        </ul>
-    </div>
+        <div class="paragraph">
+            <p>
+                sometimes i do game jams or programming events when my schedule allows it. so far, i've participated to ConUHacks, bringINTon and Ludum Dare.
+                <br />
+                in my spare time, i enjoy volunteering at DreamHack Montreal, a yearly event about gaming and LAN competitions, which i've been part of since 2016.
+                <br />
+            </p>
 
-    <div>
-        <p>
-            sometimes i do game jams or programming events when my schedule allows it. so far, i've participated to ConUHacks, bringINTon and Ludum Dare.
-            <br />
-            in my spare time, i enjoy volunteering at DreamHack Montreal, a yearly event about gaming and LAN competitions, which i've been part of since 2016.
-            <br />
-        </p>
+            <p>
+                <br />
+                here is a game i made with Robert Tran for Ludum Dare 44
+                <br />
+                <iframe frameborder="0" src="https://itch.io/embed/412483?border_width=0" width="550" height="165"></iframe>
+                <br />
+            </p>
 
-        <p>
-            <br />
-            here is a game i made with Robert Tran for Ludum Dare 44
-            <br />
-            <iframe frameborder="0" src="https://itch.io/embed/412483?border_width=0" width="550" height="165"></iframe>
-            <br />
-        </p>
+            <p>
+                <br />
+                the following is a game i've made in game engine 1 with Marc-Andre Larouche
+                <!-- insert game here -->
+            </p>
 
-        <p>
-            <br />
-            the following is a game i've made in game engine 1 with Marc-Andre Larouche
-            <!-- insert game here -->
-        </p>
+            <p>
+                <br />
+                this is the current project Alejandro Flores and i are collaborating on
+                <!-- github link with an image -->
+            </p>
 
-        <p>
-            <br />
-            this is the current project Alejandro Flores and i are collaborating on
-            <!-- github link with an image -->
-        </p>
-
-    </div>
-</body>
+        </div>
+    </body>
 
 </html>
