Added draft for about-me
Added a test game written in javascripted
Added more tests

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,6 +44,7 @@
                 <br />
                 this is the current project Alejandro Flores and i are collaborating on
                 <!-- github link with an image -->
+                <iframe frameborder="0" src="https://github.com/S0rAxel/GameEngineIIIProject" width="550" height="165"> </iframe>
             </p>
 
         </div>
