Added new fonts Updated the menu bar Added #map to about_me

--- a/aboutme.html
+++ b/aboutme.html
@@ -11,11 +11,18 @@
     <body>
         <div class="heading">
             <ul id="horizontal-list">
+                <li> <a href="index.html"> <img src="img/home-button.png" alt="home" width="25" /> </a> </li>
                 <li> <a href="aboutme.html"> about me </a> </li>
                 <li> <a href="portfolio.html"> portfolio </a> </li>
                 <li> <a href="contact.html"> contact </a> </li>
             </ul>
         </div>
+
+        <!-- Map figure -->
+        <figure id="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d218134.27839632542!2d-73.87038497104587!3d45.55819684525926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cc91a541c64b70d%3A0x654e3138211fefef!2sMontreal%2C%20QC!5e1!3m2!1sen!2sca!4v1576430888353!5m2!1sen!2sca" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+            <figcaption> I was born and raised in Montréal, Québec. </figcaption>
+        </figure>
 
         <div class="paragraph">
             <p>
@@ -31,7 +38,7 @@
             <br />
 
             <p>
-                here is my dog, <a href="#">hiro</a>, in his great gloriousness
+                here is my dog, hiro, in his great gloriousness
             </p>
 
             <br />
