--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
         <div class="heading">
             <ul id="horizontal-list">
+                <li> <a href="index.html"> <img src="img/home-button.png" alt="home" width="25"/> </a> </li>
                 <li> <a href="aboutme.html"> about me </a> </li>
                 <li> <a href="portfolio.html"> portfolio </a> </li>
                 <li> <a href="contact.html"> contact </a> </li>
