--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,7 @@
     <body>
         <div class="heading">
             <ul id="horizontal-list">
+                <li> <a href="index.html"> <img src="img/home-button.png" alt="home" width="25" /> </a> </li>
                 <li> <a href="aboutme.html"> about me </a> </li>
                 <li> <a href="portfolio.html"> portfolio </a> </li>
                 <li> <a href="contact.html"> contact </a> </li>
