--- a/aboutme.html
+++ b/aboutme.html
@@ -1,53 +1,134 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
-        <link rel="stylesheet" href="css/reset.css" />
-        <link rel="stylesheet" href="css/body_stylesheet.css" />
-        <link rel="stylesheet" href="css/img_stylesheet.css" />
-        <title> angelsiu/about_me </title>
-    </head>
+<head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/body_stylesheet.css" />
+    <link rel="stylesheet" href="css/img_stylesheet.css" />
+    <title> angelsiu/about_me </title>
+</head>
     
-    <body>
-        <div class="heading">
-            <ul id="horizontal-list">
-                <li> <a href="index.html"> <img src="img/home-button.png" alt="home" width="25" /> </a> </li>
-                <li> <a href="aboutme.html"> about me </a> </li>
-                <li> <a href="portfolio.html"> portfolio </a> </li>
-                <li> <a href="contact.html"> contact </a> </li>
-            </ul>
+<body>
+    <div class="heading">
+        <ul id="horizontal-list">
+            <li> <a href="index.html"> <img src="img/home-button.png" alt="home" width="25" /> </a> </li>
+            <li> <a href="aboutme.html"> about me </a> </li>
+            <li> <a href="portfolio.html"> portfolio </a> </li>
+            <li> <a href="contact.html"> contact </a> </li>
+        </ul>
+    </div>
+
+    <div class="paragraph">
+        <p>
+            Welcome to my personal website! My name is Angeline, but my friends and peers tend to call me "Angie."
+            <br />
+            This is website is actually my Internet Programming I final project.
+        </p>
+
+        <p>
+            My current goal is to achieve a successful career in programming, specifically in the video games industry, and Montréal is actually in the top ten cities in North America with the largest amount of existing video games companies.
+            I enjoy playing video games and making them.
+        </p>
+
+        <br />
+    </div>
+
+    <!-- Map figure -->
+    <figure id="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d218134.27839632542!2d-73.87038497104587!3d45.55819684525926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cc91a541c64b70d%3A0x654e3138211fefef!2sMontreal%2C%20QC!5e1!3m2!1sen!2sca!4v1576430888353!5m2!1sen!2sca" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        <figcaption> I was born and raised in Montréal, Québec. </figcaption>
+    </figure>
+
+    <div class="paragraph">
+        <p>
+            My other hobbies include reading, stargazing and travelling. I plan to travel the most of the world that I can.
+            So far, my favourite place to visit is Venice, Italy.
+        </p>
+
+        <p>
+            I also really love my dog, Hiro. He is a Papillon with a very strong personality, but remains our loveable, too-smart-for-his-own-good family member.
+        </p>
+    </div>
+
+    <!-- Hiro pictures slideshow -->
+    <div class="slideshow-container">
+        <div class="slides fade">
+            <div class="number-text"> 1 / 3</div>
+            <img src="img/hiro-socks.jpg" style="width:100%">
+            <div class="text">Hiro with Socks</div>
         </div>
 
-        <!-- Map figure -->
-        <figure id="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d218134.27839632542!2d-73.87038497104587!3d45.55819684525926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cc91a541c64b70d%3A0x654e3138211fefef!2sMontreal%2C%20QC!5e1!3m2!1sen!2sca!4v1576430888353!5m2!1sen!2sca" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-            <figcaption> I was born and raised in Montréal, Québec. </figcaption>
-        </figure>
-
-        <div class="paragraph">
-            <p>
-                i'm a third year student in computer science: video games programming at LaSalle College
-                <br />
-                i represent the whole video games programming student body, as a one of the two class delegates
-                <br />
-                i am also currently an active member of Innovators in Technology, the computer science association of LaSalle College, holding executive position for video games programming
-                <br />
-
-            </p>
-
-            <br />
-
-            <p>
-                here is my dog, hiro, in his great gloriousness
-            </p>
-
-            <br />
-
-            <figure>
-                <img id="hiro-socks" src="img/hiro.JPG" alt="hiro with socks" />
-                <figcaption> look how beautiful of a creature he is</figcaption>
-            </figure>
+        <div class="slides fade">
+            <div class="number-text"> 2 / 3</div>
+            <img src="img/hiro-snow.jpg" style="width:100%">
+            <div class="text">Caption Two</div>
         </div>
-    </body>
+
+        <div class="slides fade">
+            <div class="number-text"> 3 / 3</div>
+            <img src="img/hiro-donut.jpg" style="width:100%">
+            <div class="text">Caption Two</div>
+
+        </div>
+
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+
+    <div class="dots-container">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+    </div>
+
+    <script>
+        var slideIndex = 1;
+        showSlides(slideIndex);
+        setTimeout(automaticChange, 7000);
+
+        function nextSlide(n) {
+            slideIndex += n;
+            showSlides(slideIndex);
+        }
+
+        function currentSlide(n) {
+            slideIndex = n;
+            showSlides(slideIndex);
+        }
+
+        function showSlides(n) {
+            var i
+            var slides = document.getElementByClassName("slides")
+            var dots = document.getElementsByClassName("dot");
+
+            if (n > slides.length) {
+                slideIndex = 1;
+            }
+            if (n < 1) {
+                slideIndex = slides.length;
+            }
+
+            for (i = 0; i < slides.length; i++) {
+                slides[i].style.display = "none";
+            }
+
+            for (i = 0; i < dots.length; i++) {
+                dots[i].className = dots[i].className.replace(" active", "");
+            }
+
+            slides[slideIndex - 1].style.display = "block";
+            dots[slideIndex - 1].className += " active";
+        }
+
+        function automaticChange() {
+            slideIndex++;
+            showSlides(slideIndex);
+            setTimeout(automaticChange, 7000);
+        }
+
+    </script>
+
+</body>
 
 </html>
