Updated portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,31 +21,48 @@
 
         <div class="paragraph">
             <p>
-                sometimes i do game jams or programming events when my schedule allows it. so far, i've participated to ConUHacks, bringINTon and Ludum Dare.
+                As a future video games programmer, I try to participate in the most game jams or hackathons my schedule allows.
+                So far, I have participated to ConUHacks, bringINTon and Ludum Dare.
                 <br />
-                in my spare time, i enjoy volunteering at DreamHack Montreal, a yearly event about gaming and LAN competitions, which i've been part of since 2016.
-                <br />
+                In my spare time, I enjoy volunteering at DreamHack Montreal, a yearly event about professional gaming and LAN competitions, for which I've been part of since 2016.
             </p>
-
+            <br /><br />
             <p>
-                <br />
-                here is a game i made with Robert Tran for Ludum Dare 44
+                <h2 id="projects-title">
+                    Project "Limbblade"
+                </h2>
                 <br />
                 <iframe frameborder="0" src="https://itch.io/embed/412483?border_width=0" width="550" height="165"></iframe>
                 <br />
-            </p>
+                This is a collaborative project done with Robert Tran for the game jam Ludum Dare 44. 
+                It was completed within 20 hours, and it is an adventure game made with Unity Engine, where the theme "Your Life is Currency."
 
-            <p>
-                <br />
-                the following is a game i've made in game engine 1 with Marc-Andre Larouche
-                <!-- insert game here -->
             </p>
-
+            <br /> <br />
             <p>
+                <h2 id="projects-title">
+                    Project "slacker-tracker"
+                </h2>
                 <br />
-                this is the current project Alejandro Flores and i are collaborating on
-                <!-- github link with an image -->
-                <iframe frameborder="0" src="https://github.com/S0rAxel/GameEngineIIIProject" width="550" height="165"> </iframe>
+                <a href="https://github.com/angelsiv/slacker-tracker" target="_blank">
+                    <img src="img/game1.png" width="550" height="165" alt="slacker-tracker-img"/>
+                </a>
+                <br /> <br />
+                This is a game I've started in the class of Game Engine I, with prof. Marc-Andre Larouche. 
+                Created in Unity Engine, this is a casual first person shooter, where you must maintain the workplace productivity by shooting your employees with a toy gun.
+            </p>
+            <br /> <br />
+            <p>
+                <h2 id="projects-title">
+                    Project "Unnamed Dungeon"
+                </h2>
+                <br />
+                <a href="https://github.com/S0rAxel/GameEngineIIIProject" target="_blank">
+                    <img src="img/game2.png" width="550" height="165" alt="slacker-tracker-img"/>
+                </a>
+                <br /> <br />
+                This is the current project Alejandro Flores and I are collaborating on. It is our final project submission for Game Engine III, with prof. Felix Soumpholphakdy.
+                It is a 2.5D dungeon-crawler, where the player is a Skeleton whom must defeat Humans in order to regain humanity.
             </p>
 
         </div>
