--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,15 @@
                 <li> <a href="contact.html"> contact </a> </li>
             </ul>
         </div>
-    </body>
 
+        <div class="contact-container">
+            <p>
+                You can find me on
+                <a href="#"> LinkedIn. </a>
+            </p>
+            <p>
+                Or send a message to my email address: siv.angeline@ymail.com.
+            </p>
+        </div>
+    </body>
 </html>
