--- a/contact.html
+++ b/contact.html
@@ -21,10 +21,10 @@
         <div class="contact-container">
             <p>
                 You can find me on
-                <a href="#"> LinkedIn. </a>
+                <a href="https://www.linkedin.com/in/angeline-siv/" target="_blank"> LinkedIn. </a>
             </p>
             <p>
-                Or send a message to my email address: siv.angeline@ymail.com.
+                Or send a message to my email address: siv.angeline@ymail.com
             </p>
         </div>
     </body>
