--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="css/img_stylesheet.css" />
         <title> angelsiu </title>
 
-        <script>
+        <!--<script>
             var coll = document.getElementsByClassName("rolecollapsible");
             var i;
 
@@ -23,7 +23,7 @@
                     }
                 });
             }
-        </script>
+        </script>-->
     </head>
 
     <body>
@@ -45,7 +45,7 @@
         <div>
             <h1> hi<span style="color: white">!</span> my name is angeline </h1>
             <!--<h2> and i'm studying {video games programming} </h2>-->
-            <table style="align-self:center">
+            <!--<table>
                 <tr>
                     <td>
                         <h2> and i'm studying </h2>
@@ -56,7 +56,17 @@
                         </h2>
                     </td>
                 </tr>
-            </table>
+            </table>-->
+            <ul id="skill-list">
+                <li>
+                    <h2> and i'm studying </h2>
+                </li>
+                <li>
+                    <h2>
+                        <span style="color: white">{</span>video games programming<span style="color: white">}</span>
+                    </h2>
+                </li>
+            </ul>
         </div>
 
         <!-- OTHER PAGES THAT REDIRECTS YOU -->
